--- a/ReservasHotel.ipynb
+++ b/ReservasHotel.ipynb
@@ -2,9 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         id  numAdultos  numNiños  nochesFinde  nochesEntreSemana  \\\n",
+      "0  INN00001           2         0            1                  2   \n",
+      "1  INN00002           2         0            2                  3   \n",
+      "2  INN00003           1         0            2                  1   \n",
+      "3  INN00004           2         0            0                  2   \n",
+      "4  INN00005           2         0            1                  1   \n",
+      "\n",
+      "  tipoPlanComidas  parking tipoHabitacion  antelacionReserva  añoLlegada  \\\n",
+      "0     Meal Plan 1        0    Room_Type 1                224        2017   \n",
+      "1    Not Selected        0    Room_Type 1                  5        2018   \n",
+      "2     Meal Plan 1        0    Room_Type 1                  1        2018   \n",
+      "3     Meal Plan 1        0    Room_Type 1                211        2018   \n",
+      "4    Not Selected        0    Room_Type 1                 48        2018   \n",
+      "\n",
+      "   mesLlegada  diaLlegada segmentoMercado  clienteRepetido  \\\n",
+      "0          10           2         Offline                0   \n",
+      "1          11           6          Online                0   \n",
+      "2           2          28          Online                0   \n",
+      "3           5          20          Online                0   \n",
+      "4           4          11          Online                0   \n",
+      "\n",
+      "   numCancelacionesPrevias  numReservasPreviasNoCanceladas  \\\n",
+      "0                        0                               0   \n",
+      "1                        0                               0   \n",
+      "2                        0                               0   \n",
+      "3                        0                               0   \n",
+      "4                        0                               0   \n",
+      "\n",
+      "   precioMedioHabitacion  numSolicitudesEspeciales estadoReserva  \n",
+      "0                  65.00                         0  Not_Canceled  \n",
+      "1                 106.68                         1  Not_Canceled  \n",
+      "2                  60.00                         0      Canceled  \n",
+      "3                 100.00                         0      Canceled  \n",
+      "4                  94.50                         0      Canceled  \n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -18,13 +59,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['id', 'numAdultos', 'numNiños', 'nochesFinde', 'nochesEntreSemana',\n",
+      "       'tipoPlanComidas', 'parking', 'tipoHabitacion', 'antelacionReserva',\n",
+      "       'añoLlegada', 'mesLlegada', 'diaLlegada', 'segmentoMercado',\n",
+      "       'clienteRepetido', 'numCancelacionesPrevias',\n",
+      "       'numReservasPreviasNoCanceladas', 'precioMedioHabitacion',\n",
+      "       'numSolicitudesEspeciales', 'estadoReserva'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Realizar análisis simple, por ejemplo, calcular estadísticas descriptivas\n",
-    "estadisticas_descriptivas = datos.describe()\n",
-    "print(estadisticas_descriptivas)"
+    "# Obtener los encabezados de las columnas\n",
+    "encabezados = datos.columns\n",
+    "\n",
+    "print(encabezados)"
    ]
   },
   {
@@ -33,31 +89,133 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'nombre_de_la_columna'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\indexes\\base.py:3790\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3789\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 3790\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[0;32m   3791\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
-      "File \u001b[1;32mindex.pyx:152\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mindex.pyx:181\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:7080\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'nombre_de_la_columna'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\david\\Documents\\GitHub\\Ejemplo-Reservas-Hotel\\ReservasHotel.ipynb Cell 3\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/david/Documents/GitHub/Ejemplo-Reservas-Hotel/ReservasHotel.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Calcular la media de una columna específica\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/david/Documents/GitHub/Ejemplo-Reservas-Hotel/ReservasHotel.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m media_columna \u001b[39m=\u001b[39m datos[\u001b[39m'\u001b[39;49m\u001b[39mnombre_de_la_columna\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39mmean()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/david/Documents/GitHub/Ejemplo-Reservas-Hotel/ReservasHotel.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mMedia de la columna \u001b[39m\u001b[39m'\u001b[39m\u001b[39mnombre_de_la_columna\u001b[39m\u001b[39m'\u001b[39m\u001b[39m: \u001b[39m\u001b[39m{\u001b[39;00mmedia_columna\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\frame.py:3896\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3894\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m   3895\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3896\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[0;32m   3897\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3898\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pandas\\core\\indexes\\base.py:3797\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3792\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(casted_key, \u001b[39mslice\u001b[39m) \u001b[39mor\u001b[39;00m (\n\u001b[0;32m   3793\u001b[0m         \u001b[39misinstance\u001b[39m(casted_key, abc\u001b[39m.\u001b[39mIterable)\n\u001b[0;32m   3794\u001b[0m         \u001b[39mand\u001b[39;00m \u001b[39many\u001b[39m(\u001b[39misinstance\u001b[39m(x, \u001b[39mslice\u001b[39m) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m casted_key)\n\u001b[0;32m   3795\u001b[0m     ):\n\u001b[0;32m   3796\u001b[0m         \u001b[39mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3797\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[0;32m   3798\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[0;32m   3799\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3800\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3801\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3802\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'nombre_de_la_columna'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         numAdultos      numNiños   nochesFinde  nochesEntreSemana  \\\n",
+      "count  36275.000000  36275.000000  36275.000000       36275.000000   \n",
+      "mean       1.844962      0.105279      0.810724           2.204300   \n",
+      "std        0.518715      0.402648      0.870644           1.410905   \n",
+      "min        0.000000      0.000000      0.000000           0.000000   \n",
+      "25%        2.000000      0.000000      0.000000           1.000000   \n",
+      "50%        2.000000      0.000000      1.000000           2.000000   \n",
+      "75%        2.000000      0.000000      2.000000           3.000000   \n",
+      "max        4.000000     10.000000      7.000000          17.000000   \n",
+      "\n",
+      "            parking  antelacionReserva    añoLlegada    mesLlegada  \\\n",
+      "count  36275.000000       36275.000000  36275.000000  36275.000000   \n",
+      "mean       0.030986          85.232557   2017.820427      7.423653   \n",
+      "std        0.173281          85.930817      0.383836      3.069894   \n",
+      "min        0.000000           0.000000   2017.000000      1.000000   \n",
+      "25%        0.000000          17.000000   2018.000000      5.000000   \n",
+      "50%        0.000000          57.000000   2018.000000      8.000000   \n",
+      "75%        0.000000         126.000000   2018.000000     10.000000   \n",
+      "max        1.000000         443.000000   2018.000000     12.000000   \n",
+      "\n",
+      "         diaLlegada  clienteRepetido  numCancelacionesPrevias  \\\n",
+      "count  36275.000000     36275.000000             36275.000000   \n",
+      "mean      15.596995         0.025637                 0.023349   \n",
+      "std        8.740447         0.158053                 0.368331   \n",
+      "min        1.000000         0.000000                 0.000000   \n",
+      "25%        8.000000         0.000000                 0.000000   \n",
+      "50%       16.000000         0.000000                 0.000000   \n",
+      "75%       23.000000         0.000000                 0.000000   \n",
+      "max       31.000000         1.000000                13.000000   \n",
+      "\n",
+      "       numReservasPreviasNoCanceladas  precioMedioHabitacion  \\\n",
+      "count                    36275.000000           36275.000000   \n",
+      "mean                         0.153411             103.423539   \n",
+      "std                          1.754171              35.089424   \n",
+      "min                          0.000000               0.000000   \n",
+      "25%                          0.000000              80.300000   \n",
+      "50%                          0.000000              99.450000   \n",
+      "75%                          0.000000             120.000000   \n",
+      "max                         58.000000             540.000000   \n",
+      "\n",
+      "       numSolicitudesEspeciales  \n",
+      "count              36275.000000  \n",
+      "mean                   0.619655  \n",
+      "std                    0.786236  \n",
+      "min                    0.000000  \n",
+      "25%                    0.000000  \n",
+      "50%                    0.000000  \n",
+      "75%                    1.000000  \n",
+      "max                    5.000000  \n",
+      "         numAdultos      numNiños   nochesFinde  nochesEntreSemana  \\\n",
+      "count  36275.000000  36275.000000  36275.000000       36275.000000   \n",
+      "mean       1.844962      0.105279      0.810724           2.204300   \n",
+      "std        0.518715      0.402648      0.870644           1.410905   \n",
+      "min        0.000000      0.000000      0.000000           0.000000   \n",
+      "25%        2.000000      0.000000      0.000000           1.000000   \n",
+      "50%        2.000000      0.000000      1.000000           2.000000   \n",
+      "75%        2.000000      0.000000      2.000000           3.000000   \n",
+      "max        4.000000     10.000000      7.000000          17.000000   \n",
+      "\n",
+      "            parking  antelacionReserva    añoLlegada    mesLlegada  \\\n",
+      "count  36275.000000       36275.000000  36275.000000  36275.000000   \n",
+      "mean       0.030986          85.232557   2017.820427      7.423653   \n",
+      "std        0.173281          85.930817      0.383836      3.069894   \n",
+      "min        0.000000           0.000000   2017.000000      1.000000   \n",
+      "25%        0.000000          17.000000   2018.000000      5.000000   \n",
+      "50%        0.000000          57.000000   2018.000000      8.000000   \n",
+      "75%        0.000000         126.000000   2018.000000     10.000000   \n",
+      "max        1.000000         443.000000   2018.000000     12.000000   \n",
+      "\n",
+      "         diaLlegada  clienteRepetido  numCancelacionesPrevias  \\\n",
+      "count  36275.000000     36275.000000             36275.000000   \n",
+      "mean      15.596995         0.025637                 0.023349   \n",
+      "std        8.740447         0.158053                 0.368331   \n",
+      "min        1.000000         0.000000                 0.000000   \n",
+      "25%        8.000000         0.000000                 0.000000   \n",
+      "50%       16.000000         0.000000                 0.000000   \n",
+      "75%       23.000000         0.000000                 0.000000   \n",
+      "max       31.000000         1.000000                13.000000   \n",
+      "\n",
+      "       numReservasPreviasNoCanceladas  precioMedioHabitacion  \\\n",
+      "count                    36275.000000           36275.000000   \n",
+      "mean                         0.153411             103.423539   \n",
+      "std                          1.754171              35.089424   \n",
+      "min                          0.000000               0.000000   \n",
+      "25%                          0.000000              80.300000   \n",
+      "50%                          0.000000              99.450000   \n",
+      "75%                          0.000000             120.000000   \n",
+      "max                         58.000000             540.000000   \n",
+      "\n",
+      "       numSolicitudesEspeciales  \n",
+      "count              36275.000000  \n",
+      "mean                   0.619655  \n",
+      "std                    0.786236  \n",
+      "min                    0.000000  \n",
+      "25%                    0.000000  \n",
+      "50%                    0.000000  \n",
+      "75%                    1.000000  \n",
+      "max                    5.000000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Realizar análisis simple, por ejemplo, calcular estadísticas descriptivas\n",
+    "estadisticas_descriptivas = datos.describe()\n",
+    "print(estadisticas_descriptivas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Media de la columna 'numAdultos': 1.8449620951068229\n"
      ]
     }
    ],
    "source": [
     "# Calcular la media de una columna específica\n",
-    "media_columna = datos['nombre_de_la_columna'].mean()\n",
-    "print(f\"Media de la columna 'nombre_de_la_columna': {media_columna}\")"
+    "media_columna = datos['numAdultos'].mean()\n",
+    "print(f\"Media de la columna 'numAdultos': {media_columna}\")"
    ]
   }
  ],
@@ -77,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
